# papers-material

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-hub.yml
doc/: E21-HARNESS-SCOPING.md  FOLLOWUP-SIGNIFICANCE.md  PROMPT_BOOTSTRAP.md  PROMPT_EXPERIMENT.md
doc/debate-scoring-prompt/: briefing.md  round1-claude.md  round1-codex.md  round1-gemini.md  round2-claude.md  round2-codex.md  round2-gemini.md  round3-codex.md  round3-gemini.md
results/: REPORT.md  heuristic_summary.json  heuristic_trials.json  significance.json  summary.json  trials.json
src/: config.py  experiment.py
src/analysis/: significance.py
src/baseline/: __init__.py  store.py
src/classifier/: __init__.py  router.py
src/dataset/: __init__.py  loader.py  types.py
src/evaluation/: __init__.py  embed.py  llm.py  types.py
src/routing/: __init__.py  ingest.py  kb_store.py  me_store.py  router.py
tests/: test_baseline.py  test_classifier.py  test_dataset.py  test_evaluation.py  test_ingest.py  test_kb_store.py  test_me_store.py
